# chat_rooms.rs

./: LICENSE  README.md
client/: package-lock.json  package.json
client/src/: index.html  main.css  main.js
client/src/scripts/: config.js  controller.js  main.js  templates.js
client/src/styles/: chat.css  choose.css  main.css
server/: Cargo.toml
server/src/: bin.rs  cors.rs  lib.rs
server/src/rooms/: mod.rs  room.rs  rooms_map.rs
