[package]
name = "server"
version = "0.1.0"
authors = ["JasterV <victorcoder2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "rest-api"
path = "src/bin.rs"

[dependencies]
rocket = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }
rocket_cors = "0.5.0-beta-2"
ws = "0.9.1"
url = "2.2.0"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json"]
